--- a/app/src/main/res/layout/activity_itens_tipo_prestador.xml
+++ b/app/src/main/res/layout/activity_itens_tipo_prestador.xml
@@ -3,23 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/txtTpDesc"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/txtTpDesc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-        <android.support.v7.widget.AppCompatRadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Habilitado?" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/txtTpHabil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
