--- a/app/src/main/res/layout/activity_itens_tipo_prestador.xml
+++ b/app/src/main/res/layout/activity_itens_tipo_prestador.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
+
+    <TextView
+        android:id="@+id/txt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/txtCodigo"/>
+
+    <TextView
+        android:id="@+id/txtTpCodigo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/txt1"/>
+
+
+    <TextView
+        android:id="@+id/txt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_below="@id/txt1"
+        android:text="@string/txtDescTP"/>
 
     <TextView
         android:id="@+id/txtTpDesc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTpCodigo"
+        android:layout_toRightOf="@id/txt2"/>
+
+    <TextView
+        android:id="@+id/txt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_below="@id/txt2"
+        android:text="@string/txtHabilitado"/>
 
     <TextView
         android:id="@+id/txtTpHabil"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTpDesc"
+        android:layout_toRightOf="@id/txt3"/>
+
+
+
+
+</RelativeLayout>
