--- a/app/src/main/res/layout/activity_ttipo_prestador.xml
+++ b/app/src/main/res/layout/activity_ttipo_prestador.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.administrador.TTipoPrestador2">
+    tools:context=".activities.administrador.TTipoPrestador">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_ttipo_prestador2" />
+    <include layout="@layout/content_ttipo_prestador" />
 
     <LinearLayout
         android:layout_width="match_parent"
