--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#0f82d2</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#CF376B</color>
 </resources>
