--- a/app/src/main/res/layout/activity_add_tipo_prestador.xml
+++ b/app/src/main/res/layout/activity_add_tipo_prestador.xml
@@ -42,17 +42,17 @@
             android:layout_gravity="center_vertical">
 
             <RadioButton
-                android:id="@+id/rbHabilitado"
+                android:id="@+id/rbTPAtivo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="@string/rbHabilitado" />
+                android:text="@string/rbTpAtivo" />
 
             <RadioButton
-                android:id="@+id/rbDesabilitado"
+                android:id="@+id/rbTPDesabilitado"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/rbDesabilitado" />
+                android:text="@string/rbTpDesabilitado" />
         </RadioGroup>
 
     </LinearLayout>
