--- a/app/src/main/res/layout/activity_ttipo_prestador.xml
+++ b/app/src/main/res/layout/activity_ttipo_prestador.xml
@@ -26,10 +26,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_below="@id/appbarlayout"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <ListView
             android:id="@+id/lvTPPrestador"
+            android:layout_below="@id/appbarlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
