--- a/app/src/main/res/layout/activity_administrador.xml
+++ b/app/src/main/res/layout/activity_administrador.xml
@@ -44,9 +44,7 @@
         android:padding="14dp"
         >
 
-        <!-- Row 1 -->
-
-        <!-- Column 1 -->
+        <!-- Prestador -->
         <android.support.v7.widget.CardView
             android:id="@+id/cardPrestador"
             android:layout_width="0dp"
@@ -86,7 +84,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <!-- Column 2 -->
+        <!-- Cliente -->
         <android.support.v7.widget.CardView
             android:id="@+id/cardCliente"
             android:layout_width="0dp"
@@ -126,10 +124,7 @@
 
         </android.support.v7.widget.CardView>
 
-
-        <!-- Row 2 -->
-
-        <!-- Column 1 -->
+        <!-- Tipo de Prestador-->
         <android.support.v7.widget.CardView
             android:id="@+id/cardTipoPrestador"
             android:onClick="tpPrestador"
@@ -170,7 +165,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <!-- Column 2 -->
+        <!-- Ordem de Pagamento -->
         <android.support.v7.widget.CardView
             android:id="@+id/cardOrdemdePagamento"
             android:layout_width="0dp"
@@ -210,12 +205,10 @@
 
         </android.support.v7.widget.CardView>
 
-
-        <!-- Row 2 -->
-
-        <!-- Column 1 -->
+        <!-- Solicitação de Serviço-->
         <android.support.v7.widget.CardView
             android:id="@+id/cardSolicitacaoServico"
+            android:onClick="solicitacaoServido"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_columnWeight="1"
@@ -253,7 +246,7 @@
 
         </android.support.v7.widget.CardView>
 
-        <!-- Column 2 -->
+        <!-- Ordem de Serviço -->
         <android.support.v7.widget.CardView
             android:id="@+id/cardOrdemServico"
             android:layout_width="0dp"
