--- a/app/src/main/res/layout/activity_itens_solicitacao.xml
+++ b/app/src/main/res/layout/activity_itens_solicitacao.xml
@@ -14,11 +14,10 @@
         android:text="@string/txtId"/>
 
     <TextView
-        android:id="@+id/txtTpId"
+        android:id="@+id/txtSId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/txt1"/>
-
 
     <TextView
         android:id="@+id/txt2"
@@ -26,13 +25,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_below="@id/txt1"
-        android:text="@string/txtDescTP"/>
+        android:text="@string/txtData"/>
 
     <TextView
-        android:id="@+id/txtTpDesc"
+        android:id="@+id/txtSData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtTpId"
+        android:layout_below="@id/txtSId"
         android:layout_toRightOf="@id/txt2"/>
 
     <TextView
@@ -41,14 +40,15 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_below="@id/txt2"
-        android:text="@string/txtTPAtivo"/>
+        android:text="@string/txtDescSolic"/>
 
     <TextView
-        android:id="@+id/txtTpAtivo"
+        android:id="@+id/txtSDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtTpDesc"
+        android:layout_below="@id/txtSData"
         android:layout_toRightOf="@id/txt3"/>
+
 
 
 
