Tela inicial Ordem de serviço

--- a/app/src/main/res/layout/activity_administrador.xml
+++ b/app/src/main/res/layout/activity_administrador.xml
@@ -249,6 +249,7 @@
         <!-- Ordem de Serviço -->
         <android.support.v7.widget.CardView
             android:id="@+id/cardOrdemServico"
+            android:onClick="ordemServico"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_columnWeight="1"
