--- a/app/src/main/res/layout/activity_tordem_servico.xml
+++ b/app/src/main/res/layout/activity_tordem_servico.xml
@@ -16,13 +16,14 @@
 
     </android.support.v7.widget.Toolbar>
 
-       <LinearLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ListView
-            android:id="@+id/lvSolicitacao"
+            android:id="@+id/lvOrdemServico"
             android:layout_below="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
