--- a/app/src/main/res/layout/activity_administrador.xml
+++ b/app/src/main/res/layout/activity_administrador.xml
@@ -168,6 +168,7 @@
         <!-- Ordem de Pagamento -->
         <android.support.v7.widget.CardView
             android:id="@+id/cardOrdemdePagamento"
+            android:onClick="ordemPagamento"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_columnWeight="1"
