--- a/app/src/main/res/layout/activity_edit_ordem_pagamento.xml
+++ b/app/src/main/res/layout/activity_edit_ordem_pagamento.xml
@@ -16,7 +16,7 @@
             android:layout_alignParentBottom="true"
             android:layout_width="fill_parent"
             android:gravity="center_horizontal"
-            android:text="@string/llDetOrdemServico" />
+            android:text="@string/llDetOrdemPagamento" />
 
     </LinearLayout>
 
@@ -32,11 +32,11 @@
             android:id="@+id/txtView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtOSCod"
+            android:text="@string/txtOPCod"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSCod"
+            android:id="@+id/txtOPCod"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -44,11 +44,11 @@
             android:id="@+id/txtView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtOSData"
+            android:text="@string/txtOPData"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSData"
+            android:id="@+id/txtOPData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -56,11 +56,11 @@
             android:id="@+id/txtView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtOSStatus"
+            android:text="@string/txtOPDataPagamento"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSStatus"
+            android:id="@+id/txtOPDataPagamento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -68,11 +68,11 @@
             android:id="@+id/txtView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtOSCliente"
+            android:text="@string/txtValor"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSCliente"
+            android:id="@+id/txtOPValor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -80,11 +80,11 @@
             android:id="@+id/txtView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtOSEndereco"
+            android:text="@string/txtOPCliente"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSEndereco"
+            android:id="@+id/txtOPCliente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -92,11 +92,11 @@
             android:id="@+id/txtView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtOSPrestador"
+            android:text="@string/txtOPPrestador"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSPrestador"
+            android:id="@+id/txtOPPrestador"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -104,11 +104,11 @@
             android:id="@+id/txtView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/txtSDDescricao"
+            android:text="@string/txtOPDescricao"
             android:textStyle="bold|italic"/>
 
         <TextView
-            android:id="@+id/txtOSDescricao"
+            android:id="@+id/txtOPDescricao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -122,13 +122,13 @@
         android:padding="10dip">
 
         <Button
-            android:id="@+id/btnOSCancelar"
+            android:id="@+id/btnOPPagar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="cancelar"
+            android:onClick="pagar"
             android:enabled="false"
-            android:text="@string/btnOSCancelar" />
+            android:text="@string/btnOPPagar" />
 
     </LinearLayout>
 
