Painel do Prestador iniciando layout de tela

--- a/app/src/main/res/layout/activity_painel_prestador.xml
+++ b/app/src/main/res/layout/activity_painel_prestador.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="contrato.com.activities.cliente.PainelCliente"
+    tools:context="contrato.com.activities.prestador.PainelPrestador"
     tools:ignore="MissingDefaultResource">
-
 
 
     <LinearLayout
@@ -23,7 +22,7 @@
 
             <TextView
                 android:id="@+id/textGrid"
-                android:text="@string/pnlCliente"
+                android:text="@string/pnlPrestador"
                 android:textSize="34sp"
                 android:textColor="@android:color/white"
                 android:layout_centerInParent="true"
@@ -43,9 +42,9 @@
             android:padding="14dp"
             >
 
-            <!-- Solicitacoes -->
+            <!-- Solicitacoes Disponíveis -->
             <android.support.v7.widget.CardView
-                android:id="@+id/cardPCSolicitacoes"
+                android:id="@+id/cardPPSolicitacoes"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_columnWeight="1"
@@ -71,7 +70,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
-                        android:text="@string/cardPCSolicitacoes"
+                        android:text="@string/cardPPSolicitacoes"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
@@ -85,7 +84,7 @@
 
             <!-- Ordem de Servico -->
             <android.support.v7.widget.CardView
-                android:id="@+id/cardPCOrdemServico"
+                android:id="@+id/cardPPOrdemServico"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_columnWeight="1"
@@ -111,7 +110,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
-                        android:text="@string/cardPCOrdemServico"
+                        android:text="@string/cardPPOrdemServico"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
