--- a/app/src/main/res/layout/activity_itens_ordem_servico.xml
+++ b/app/src/main/res/layout/activity_itens_ordem_servico.xml
@@ -11,61 +11,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/txtId"/>
+        android:text="@string/txtId" />
 
     <TextView
         android:id="@+id/txtOSId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/txt1"/>
+        android:layout_toRightOf="@id/txt1" />
 
     <TextView
         android:id="@+id/txt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_below="@id/txt1"
-        android:text="@string/txtData"/>
+        android:layout_weight="1"
+        android:text="@string/txtData" />
 
     <TextView
         android:id="@+id/txtOSData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtOSId"
-        android:layout_toRightOf="@id/txt2"/>
+        android:layout_toRightOf="@id/txt2" />
 
     <TextView
-    android:id="@+id/txt3"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:layout_below="@id/txt2"
-    android:text="@string/txtOSCliente"/>
-
-    <TextView
-        android:id="@+id/txtOSCliente"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtOSData"
-        android:layout_toRightOf="@id/txt3"/>
-
-    <TextView
-        android:id="@+id/txt4"
+        android:id="@+id/txt3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txt2"
         android:layout_weight="1"
-        android:layout_below="@id/txt3"
-        android:text="@string/txtOSPrestador"/>
+        android:text="@string/txtOSPrestador" />
 
     <TextView
         android:id="@+id/txtOSPrestador"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtOSCliente"
-        android:layout_toRightOf="@id/txt3"/>
+        android:layout_below="@id/txtOSData"
+        android:layout_toRightOf="@id/txt3" />
 
+    <TextView
+        android:id="@+id/txt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt3"
+        android:layout_weight="1"
+        android:text="@string/txtOSCliente" />
 
-
+    <TextView
+        android:id="@+id/txtOSCliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtOSPrestador"
+        android:layout_toRightOf="@id/txt3" />
 
 
 </RelativeLayout>
