--- a/app/src/main/res/layout/activity_painel_cliente.xml
+++ b/app/src/main/res/layout/activity_painel_cliente.xml
@@ -46,6 +46,7 @@
             <!-- Solicitacoes -->
             <android.support.v7.widget.CardView
                 android:id="@+id/cardPCSolicitacoes"
+                android:onClick="minhasSolicitacoes"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_columnWeight="1"
@@ -54,8 +55,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 app:cardElevation="8dp"
-                app:cardCornerRadius="8dp"
-                >
+                app:cardCornerRadius="8dp"                >
 
                 <LinearLayout
                     android:layout_gravity="center_horizontal|center_vertical"
@@ -86,6 +86,7 @@
             <!-- Ordem de Servico -->
             <android.support.v7.widget.CardView
                 android:id="@+id/cardPCOrdemServico"
+                android:onClick="minhasOrdensServico"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_columnWeight="1"
