Ajustes de tela

--- a/app/src/main/res/layout/activity_painel_prestador.xml
+++ b/app/src/main/res/layout/activity_painel_prestador.xml
@@ -45,6 +45,7 @@
             <!-- Solicitacoes Disponíveis -->
             <android.support.v7.widget.CardView
                 android:id="@+id/cardPPSolicitacoes"
+                android:onClick="minhasSolicitacoes"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_columnWeight="1"
