--- a/app/src/main/res/layout/activity_tsolicitacoes_aberto.xml
+++ b/app/src/main/res/layout/activity_tsolicitacoes_aberto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.cliente.TMinhasSolicitacoes">
+    tools:context=".activities.prestador.TSolicitacoesAberto">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,22 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_tminhas_solicitacoes" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/appbarlayout"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <ListView
-            android:id="@+id/lvCSolicitacao"
-            android:layout_below="@id/appbarlayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
+    <include layout="@layout/content_tsolicitacoes_aberto" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -43,8 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
-
-
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
