--- a/app/src/main/res/layout/content_tsolicitacoes_aberto.xml
+++ b/app/src/main/res/layout/content_tsolicitacoes_aberto.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.cliente.TMinhasOrdens">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".activities.prestador.TSolicitacoesAberto"
+    tools:showIn="@layout/activity_tsolicitacoes_aberto">
 
 </android.support.constraint.ConstraintLayout>
