--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:gravity="center_horizontal"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:background="@drawable/bg">
+    >
 
     <LinearLayout
         android:id="@+id/AddTpcabecalho"
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_app2"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:background="@color/colorWhite"/>
     </LinearLayout>
 
 
