--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#0f82d2</color>
     <color name="colorAccent">#CF376B</color>
+    <color name="colorWhite">#ffffff</color>
 
 </resources>
